Changed songs choice and tried to solve overflow-x problem

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ html {
 body {
   padding: 20px;
   background-color: var(--body-background-color);
+  overflow-x: hidden;
 }
 
 /* Navbar styles */
